namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test 
---
apiVersion: v1
kind: Namespace
metadata:
  name: kafka
---
apiVersion: v1
kind: Namespace
metadata:
  name: tekton-pipelines
---
apiVersion: v1
kind: Namespace
metadata:
  name: dashboard
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-mesh
---
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-nginx
---
apiVersion: v1
kind: Namespace
metadata:
  name: secrets
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
